Bug 106864: xptcall support for the ARM platform, and mild jsnum.h arm-define tweaks. Patches from Mark Crichton <crichton@gimp.org>, Russell King <rmk@arm.linux.org>, Jeroen Dobbelaere <jeroen.dobbelaere@acunia.com>. r=brendan on jsnum.h, sr=shaver, a=asa for trunk and branch.