js/src/jsnum.h
@@ -55,7 +55,7 @@ JS_BEGIN_EXTERN_C
  * are stored in big endian`s way.
  */
 
-#if defined(__arm) || defined(__arm32__) || defined(_arm26__)
+#if defined(__arm) || defined(__arm32__) || defined(__arm26__) || defined(__arm__)
 #define CPU_IS_ARM
 #endif
 
